[metadata]
name = vmware-nsx-tempest-plugin
summary = Tempest plugin vmware-nsx-tempest-plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    vmware_nsx_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmware_nsx_tempest_plugin/locale
domain = vmware_nsx_tempest_plugin

[update_catalog]
domain = vmware_nsx_tempest_plugin
output_dir = vmware_nsx_tempest_plugin/locale
input_file = vmware_nsx_tempest_plugin/locale/vmware_nsx_tempest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmware_nsx_tempest_plugin/locale/vmware_nsx_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    vmware-nsx-tempest-plugin = vmware_nsx_tempest_plugin.plugin:VmwareNsxTempestPlugin
